# playing-with-shaders

./: .editorconfig  .gitignore  Makefile  README.md  default.nix
haskell-version/: cabal.project  default.nix  gl-playground.cabal  shaders
haskell-version/app/: Main.hs
haskell-version/src/GlPlayground/: App.hs  Boilerplate.hs  Game.hs  Logger.hs  Render.hs  Shaders.hs  TypeLevel.hs  Types.hs  Utils.hs
haskell-version/src/GlPlayground/Boilerplate/: Backbone.hs  Shaders.hs
haskell-version/src/GlPlayground/Game/: MandelbrotSet.hs  TestTriangle.hs  Types.hs
haskell-version/src/GlPlayground/Game/MandelbrotSet/: ShaderProgram.hs  Types.hs
haskell-version/src/GlPlayground/TypeLevel/: Arithmetic.hs  Basic.hs  Descendible.hs  Maybe.hs  MemSizeOf.hs  Monoid.hs  Semigroup.hs  Traversable.hs  TypeName.hs
haskell-version/test/: TestSpec.hs
haskell-version/test/GlPlayground/: ImpredicativeTypesTest.hs  TypeLevel.hs
haskell-version/test/GlPlayground/TypeLevel/: MemSizeOf.hs
nix/: sources.json  utils.nix
shaders-embed/shaders/: test_fragment.cpp  test_vertex.cpp
shaders-embed/shaders/mandelbrot-set/: fragment.cpp  vertex.cpp
src/: controls.cpp  controls.hpp  gl_boilerplate.cpp  gl_boilerplate.hpp  helpers.hpp  main.cpp  render.cpp  render.hpp
src/shaders/: test_fragment.glsl  test_vertex.glsl
src/shaders/mandelbrot-set/: fragment.glsl
