cabal-version:      2.4
name:               gl-playground
version:            0.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- license:

author:             Viacheslav Lotsmanov
maintainer:         lotsmanov89@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:
    GlPlayground.App
    GlPlayground.Boilerplate
    GlPlayground.Logger
    GlPlayground.Render
    GlPlayground.Types
    GlPlayground.Utils
  build-depends:
    , GLFW-b
    , OpenGL
    , base
    , base-unicode-symbols
    , bytestring
    , lifted-async
    , monad-control
    , monad-logger
    , mtl
    , safe-exceptions
    , stm
    , text
    , unliftio
    , unliftio-core
  hs-source-dirs:
    src
  other-modules:
  ghc-options:
    -Wall

executable gl-playground
  main-is:
    Main.hs
  build-depends:
    , base
    , gl-playground
  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -threaded
