cabal-version:      2.4
name:               gl-playground
version:            0.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- license:

author:             Viacheslav Lotsmanov
maintainer:         lotsmanov89@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:
    GlPlayground.App
    GlPlayground.Boilerplate.Backbone
    GlPlayground.Boilerplate.Shaders
    GlPlayground.Game.MandelbrotSet
    GlPlayground.Game.MandelbrotSet.ShaderProgram
    GlPlayground.Game.MandelbrotSet.Types
    GlPlayground.Game.TestTriangle
    GlPlayground.Logger
    GlPlayground.Types
    GlPlayground.Utils
  build-depends:
    , base
    , base-unicode-symbols
    , bytestring
    , file-embed
    , generic-lens
    , GLFW-b
    , lifted-async
    , monad-control
    , monad-logger
    , mtl
    , OpenGL
    , OpenGLRaw
    , safe-exceptions
    , stm
    , text
    , unix
    , unliftio
    , unliftio-core
  hs-source-dirs:
    src
  other-modules:
  ghc-options:
    -Wall

executable gl-playground
  main-is:
    Main.hs
  build-depends:
    , base
    , gl-playground
  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -threaded
