cabal-version:      2.4
name:               gl-playground
version:            0.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- license:

author:             Viacheslav Lotsmanov
maintainer:         lotsmanov89@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:
    GlPlayground.App
    GlPlayground.Boilerplate.Backbone
    GlPlayground.Boilerplate.Shaders
    GlPlayground.Game
    GlPlayground.Game.MandelbrotSet
    GlPlayground.Game.MandelbrotSet.ShaderProgram
    GlPlayground.Game.MandelbrotSet.Types
    GlPlayground.Game.TestTriangle
    GlPlayground.Game.Types
    GlPlayground.Logger
    GlPlayground.TypeLevel
    GlPlayground.TypeLevel.Arithmetic
    GlPlayground.TypeLevel.Basic
    GlPlayground.TypeLevel.Descendible
    GlPlayground.TypeLevel.Maybe
    GlPlayground.TypeLevel.MemSizeOf
    GlPlayground.TypeLevel.Monoid
    GlPlayground.TypeLevel.Semigroup
    GlPlayground.TypeLevel.Traversable
    GlPlayground.TypeLevel.TypeName
    GlPlayground.Types
    GlPlayground.Utils
  build-depends:
    , base
    , base-unicode-symbols
    , bytestring
    , file-embed
    , GLFW-b
    , lifted-async
    , monad-control
    , monad-logger
    , mtl
    , OpenGL
    , OpenGLRaw
    , safe-exceptions
    , stm
    , text
    , unix
    , unliftio
    , unliftio-core
  hs-source-dirs:
    src
  other-modules:
  ghc-options:
    -Wall

executable gl-playground
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base
    , gl-playground
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -threaded

test-suite gl-playground-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    TestSpec.hs
  other-modules:
    GlPlayground.ImpredicativeTypesTest
    GlPlayground.TypeLevel
    GlPlayground.TypeLevel.MemSizeOf
  build-depends:
    , base
    , gl-playground
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , unliftio
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -threaded
